--- a/src/index.css
+++ b/src/index.css
@@ -28,15 +28,18 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background :linear-gradient(180deg, #EBF2FC 0%, #EEF8F9 100%);
+  
 }
 
 h1 {
+  color: hsl(0, 0, 0);
   font-size: 3.2em;
   line-height: 1.1;
 }
 
-button {
-  border-radius: 8px;
+button,input[type="button"] {
+  border-radius: 25px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
@@ -52,6 +55,7 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+  background-color: orange;
 }
 
 @media (prefers-color-scheme: light) {
